Add automated media pipeline and responsive images

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@media/*": ["./assets-source/*"]
     }
   },
   "include": ["src"]
